fixes issue 61 by making menus appear above dialogs using z-index.

--- a/src/themes/crispin/css/menu.css
+++ b/src/themes/crispin/css/menu.css
@@ -30,7 +30,7 @@ a.jxButtonMenu span.jxMenuItemSpan {
 .jxMenuContainer {
   position: absolute;
   display: block;
-  z-index: 200;
+  z-index: 2000;
   padding: 0px;
 }
 
